[package]
authors = ["Francisco Jesus Navarro Cortes"]
categories = ["wasm"]
description = "My awesome Yew with Yew-Router and Parcel application!"
license = "MIT/Apache-2.0"
name = "yew_style_page"
readme = "./README.md"
repository = "https://github.com/spielrs/yew-styles-page.git"
version = "0.6.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
failure = "0.1"
yew = { git="https://github.com/yewstack/yew", features = ["web_sys"]}
yew-router = {git="https://github.com/yewstack/yew", features = ["web_sys"] }
web-sys = "0.3"
yew_prism = {git="https://github.com/spielrs/yew_prism", branch="unstable"}
yew_styles= {path= "./yew_styles", features=["layouts", "button", "navbar", "forms", "card", "assets", "modal"]}
lipsum={git="https://github.com/mgeisler/lipsum"}
Inflector="0.11"
