[package]
authors = ["Francisco Jesus Navarro Cortes"]
categories = ["wasm"]
description = "My awesome Yew with Yew-Router and Parcel application!"
license = "MIT/Apache-2.0"
name = "yew_style_page"
readme = "./README.md"
repository = "https://github.com/spielrs/yew-styles-page.git"
version = "0.12.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"

[dependencies]
cfg-if = "1.0"
wasm-bindgen = "0.2.74"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
failure = "0.1"
yew = { version="0.19"}
yew-router = {version="0.16"}
web-sys = "0.3"
yew_prism = "0.4.2"
yew_styles= {path= "./yew_styles", features=["full"]}
yew_assets= {version = "0.1.2", features = ["full"]}
stylist = {version= "0.10", features= ["yew_integration"]}
lipsum={git="https://github.com/mgeisler/lipsum.git"}
Inflector="0.11"
