[package]
name = "yew_styles"
version = "0.11.0"
description = "Framework styles for yew"
documentation = "https://docs.rs/crate/yew_styles"
authors = ["Francisco Jesus Navarro Cortes <spieljs@gmail.com>"]
homepage = "https://yewstyles.spielrs.tech"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/spielrs/yew-styles-page/tree/master/crate/yew_styles"
readme = "README.md"
categories = ["wasm", "graphics", "gui", "web-programming", "web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
full = [
    "layouts",
    "button",
    "navbar",
    "forms",
    "card",
    "modal",
    "text",
    "dropdown",
    "spinner",
    "carousel",
    "tooltip"
]
layouts = []
button = []
navbar = ["layouts"]
forms = []
card = ["layouts"]
modal = []
text = []
dropdown = []
spinner = []
carousel = []
tooltip = []

[dependencies]
wasm-bindgen = "0.2"
yew = { version="0.18", features = ["web_sys"] }
web-sys = {version = "0.3", features = ["HtmlDocument", "HtmlCollection", "CssStyleDeclaration", "Selection", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "Event", "Node","HtmlOptionsCollection","HtmlOptionElement", "DataTransfer"]}
rand = {version="0.8", features = ["getrandom"]}
getrandom = {version = "0.2", features= ["js"]}
wasm-bindgen-test = "0.3"
yew_assets={version = "0.1.2", features = ["ux_assets", "editing_assets", "controller_assets", "object_assets"]}
stylist = {version= "0.9", features= ["yew_integration"]}
colorsys = "0.6.5"